--- a/css_custom_reset.css
+++ b/css_custom_reset.css
@@ -13,8 +13,43 @@ body {
   font-family: "Helvetica";
   font-weight: 100;
 
-  width: 800px;
+  width: 90%;
   margin: 80px auto;
+
+  display: flex;
+  justify-content: space-around;
+  flex-flow: row wrap;
+}
+
+header {
+  text-align: center;
+  flex: 1 100%;
+}
+
+footer {
+  flex: 1 100%;
+  order: 5;
+}
+
+.sidebar {
+  flex: 2;
+  order: 3;
+}
+
+.reviews {
+  flex: 1 100%;
+  order: 4;
+}
+
+.main {
+  flex: 1;
+  order: 2;
+}
+
+header, footer, .sidebar, .reviews, .main {
+  border: 2px solid black;
+  padding: 30px;
+  margin: 30px 30px;
 }
 
 h1 {
@@ -29,16 +64,11 @@ nav {
 
 ol, ul {
   list-style: circle outside;
-  margin-left: 1cm;
 }
 
 ol a, ul a, figcaption a {
   text-decoration: none;
   color: grey;
-}
-
-header {
-  text-align: center;
 }
 
 header ul {
@@ -47,6 +77,11 @@ header ul {
 
 header img {
   height: 100px;
+}
+
+figure img {
+  width: 550px;
+  height: auto;
 }
 
 input, option, header ul a {
