Remove skills section and add technologies to work component

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1523,40 +1523,27 @@
 
 			#skills {
 				display: flex;
-				flex-direction: column;
-				align-items: center;
+				justify-content: center;
+				flex-wrap: wrap;
+				width: 100%;
 			}
 
-				#skills header h2 {
-					text-align: center;
-				}
-
-				#skills header p {
-					text-align: center;
-				}
-
-				#skills div {
+				#skills a {
 					display: flex;
-					flex-wrap: wrap;
-					width: 80%;
+					flex-direction: column;	
+					text-decoration: none;
+					text-align: center;
 				}
-
-					#skills	div a {
-						display: flex;
-						flex-direction: column;	
-						text-decoration: none;
-						text-align: center;
+					
+					#skills p {
+						color: #aaa;
+						margin-bottom: 0em;
 					}
-						
-						#skills div p {
-							color: #aaa;
-							margin-bottom: 0em;
-						}
 
-						#skills div a img {
-							height: 5em;
-							width: 5em;
-						}
+					#skills a img {
+						height: 5em;
+						width: 5em;
+					}
 		
 		/* Work */
 
