Finish adding encore to samples page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1526,6 +1526,7 @@
 				justify-content: center;
 				flex-wrap: wrap;
 				width: 100%;
+				margin: 1em 0 0 0;
 			}
 
 				#skills a {
@@ -1538,26 +1539,53 @@
 					#skills p {
 						color: #aaa;
 						margin-bottom: 0em;
+						font-size: 14px;
 					}
 
 					#skills a img {
-						height: 5em;
-						width: 5em;
+						height: 2.5em;
+						width: 2.5em;
 					}
 		
 		/* Work */
 
-		#work {
-
+		#work header h2 {
+			text-align: center;
 		}
 
-			#work header h2 {
-				text-align: center;
+		/* Project */
+
+		.project {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin: 2.5em 0;
+		}
+
+			.project header {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				align-items: center;
+				margin: 0 0 1em 0;
 			}
 
-			#work header p {
-				text-align: center;
-			}
+				.project header h3 {
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					color: #aaa;
+				}
+
+				.project header p {
+					color: #aaa;
+					text-align: center;
+					margin: 0.25em 0 1em 0;
+				}
+
+				.project header h3 a {
+					color: #aaa;
+				}
 
 		/* Footer */
 
