--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1526,7 +1526,7 @@
 				justify-content: center;
 				flex-wrap: wrap;
 				width: 100%;
-				margin: 1em 0 0 0;
+				margin: 1em 0 4em 0;
 			}
 
 				#skills a {
